# math-series

./: README.md  pyproject.toml
series/: series.py
tests/: test_series.py
