[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["Hamza-Rashed <hamzarashed503@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
